more javascript on context switching

--- a/index.html
+++ b/index.html
@@ -14,5 +14,7 @@
 <script src="array_example.js">
 </script>
 <script src="object.js">
-    </script>
+</script>
+<script src="hoisting.js">
+</script>
 </html>
