--- a/note_manager/index.html
+++ b/note_manager/index.html
@@ -44,13 +44,20 @@
             <label for="hide">Hide notes</label>
             <input type="checkbox" id="hide">
         </div>
+        <div id="man-dom">
+            <label>Manipulate Dom</label>
+        </div>
         <div id="add-notes">
             <form id="add">
                 <input type="text" placeholder="Add a note.." id="add-input">
                 <input type="submit" value="Add A Note" id="add-btn">
             </form>
         </div>
+        
     </div>
 </body>
-<script src="script.js"></script>
+<!-- <script src="script.js"></script> -->
+<!-- <script src="dom_manipulation.js"></script> -->
+<!-- <script src="events.js"></script> -->
+<script arc="execrise.js"></script>
 </html>
