--- a/note_manager/index.html
+++ b/note_manager/index.html
@@ -59,5 +59,5 @@
 <!-- <script src="script.js"></script> -->
 <!-- <script src="dom_manipulation.js"></script> -->
 <!-- <script src="events.js"></script> -->
-<script arc="execrise.js"></script>
+<script src="execrise.js"></script>
 </html>
