--- a/advance/index.html
+++ b/advance/index.html
@@ -5,11 +5,14 @@
     <title>Advanced JavaScript</title>
 </head>
 <body>
-    <h1>Everything is an object</h1>
+    <!-- <h1>Everything is an object</h1>
     <script src='everthing_is_object.js'></script>
     <h1>Function Constructor</h1>
     <script src='func_constructor.js'></script>
     <h1>Prototype</h1>
-    <script src='prototype.js'></script>
+    <script src='prototype.js'></script> -->
+    <h1>First-class function</h1>
+    <script src='first_class_func.js'></script>
+
 </body>
 </html>
