--- a/advance/index.html
+++ b/advance/index.html
@@ -6,13 +6,15 @@
 </head>
 <body>
     <!-- <h1>Everything is an object</h1>
-    <script src='everthing_is_object.js'></script>
+    <script src='everthing_is_object.js'></script> 
     <h1>Function Constructor</h1>
     <script src='func_constructor.js'></script>
     <h1>Prototype</h1>
-    <script src='prototype.js'></script> -->
+    <script src='prototype.js'></script>
     <h1>First-class function</h1>
-    <script src='first_class_func.js'></script>
+    <script src='first_class_func.js'></script> -->
+    <h1>JSON & AJAX</h1>
+    <script src='json_ajax.js'></script>
 
 </body>
 </html>
