add gitignore file

--- a/es6/index.html
+++ b/es6/index.html
@@ -5,8 +5,19 @@
     <title>JavaScript ES6</title>
 </head>
 <body>
-    <h1>Array Helper</h1>
-    <script src='array_helper.js'></script> 
-
+    <!-- <h1>Array Helper</h1>
+    <script src='array_helper.js'></script> -->
+    <!-- <h1>let & const variable and Template Strings</h1>
+    <script src='variable.js'></script>   -->
+    <!-- <h1>Arrow Functions</h1>
+    <script src='arrow.js'></script>  -->
+    <!-- <h1>Rest Parameter</h1>
+    <script src='rest.js'></script>  -->
+    <!-- <h1>Destructuring</h1>
+    <script src='destruct.js'></script>  -->
+    <!-- <h1>Map & Set</h1>
+    <script src='map_set.js'></script>  -->
+    <h1>Class</h1>
+    <script src='class.js'></script> 
 </body>
 </html>
